# f4d

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  settings.gradle
LR/: recg.cpp  util.h
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/f4d/: CHANGELOG.md  README.md  build.gradle
android/f4d/about/: build.gradle
android/f4d/about/src/main/: AndroidManifest.xml
android/f4d/app/: build.gradle
android/f4d/app/src/main/: AndroidManifest.xml
android/f4d/gradle/wrapper/: gradle-wrapper.properties
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/assets/: funu.html
app/src/main/res/drawable/: ic_adjust.xml  ic_bubble_chart.xml  progressbar_orange_selector.xml
app/src/main/res/layout/: activity_about.xml  activity_camera.xml  activity_common.xml  activity_draw.xml  activity_login.xml  activity_main.xml  activity_picture.xml  activity_splash.xml  app_bar_draw.xml  common_toolbar.xml  content_draw.xml  fragment_article_list.xml  (+9 more)
camera/: build.gradle
camera/src/main/: AndroidManifest.xml
face4d/android/app/: build.gradle
gradle/wrapper/: gradle-wrapper.properties
qt/: CMakeLists.txt  GLOBAL_VAR.cpp  f4d.pro  start.pro
qt/.svn/: wc.db
qt/Face/: FitModel.cpp
qt/dialogs/.svn/: wc.db
qt/eos/core/: LandmarkMapper.hpp
qt/include/: f4main.h
qt/src/: CMakeLists.txt  f4main.cpp  main.cpp
qt/ui/: f4main.ui
src/: .gitmodules  CMakeLists.txt  README.md  cxxopts.hpp  f4d.cpp  f4d_demo.cpp  face4D.cpp  help.hpp  helper.cpp  helper.h
vr/src/main/: AndroidManifest.xml
vrlib/: build.gradle
(+391 files in other folders)
